# password-manager-cli

./: .gitignore  Cargo.toml  TODO  readme.md
src/: app.rs  constants.rs  keystore_manager.rs  main.rs  models.rs  utils.rs  views.rs
src/app/: controllers.rs  mod.rs  views.rs
src/profile/: controllers.rs  mod.rs  views.rs
