[package]
name = "cript-file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpassword = "7.3.1"
chacha20poly1305 = "0.10.1"
pbkdf2 = "0.12.2"
sha2 = "0.10.8"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
terminal-menu = "3.0.0"
crossterm = "0.25.0"
ctrlc = "3.4.4"
